--- a/bio.html
+++ b/bio.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2 class="centered">Jack's Bio</h2>
+<h2 class="centered" style="text-align: center">Jack's Bio</h2>
 
 <div>
     <ul>
