--- a/bio.html
+++ b/bio.html
@@ -16,7 +16,7 @@
         <li><a href="workExp.html">Work Experience</a></li>
     </ul>
 </div>
-    <p>
+    <p class="centered" style="text-align: center">
         My name is Jack Palmstrom, and I am studying computer science at WPI. I have interests in both web development
         as well as mobile development. I am a senior at WPI and a member of the class of 2019.
     </p>
